--- a/resources/web/creators_register.html
+++ b/resources/web/creators_register.html
@@ -148,7 +148,7 @@
                   data-bv-notempty-message="The username is required and cannot be empty"
 
                   data-bv-regexp="true"
-                  data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                  data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                   data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                   data-bv-stringlength="true"
@@ -465,7 +465,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -566,7 +566,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -732,7 +732,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
