--- a/resources/testweb/about.html
+++ b/resources/testweb/about.html
@@ -204,7 +204,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -305,7 +305,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -471,7 +471,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
