--- a/resources/testweb/creator_funds.html
+++ b/resources/testweb/creator_funds.html
@@ -902,7 +902,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -1003,7 +1003,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -1169,7 +1169,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
