--- a/resources/testweb/creator_pricing.html
+++ b/resources/testweb/creator_pricing.html
@@ -859,7 +859,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -960,7 +960,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -1126,7 +1126,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
