--- a/resources/testweb/userdashboard_pieces.html
+++ b/resources/testweb/userdashboard_pieces.html
@@ -255,7 +255,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -356,7 +356,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -522,7 +522,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
