--- a/resources/web/creator_rewards.html
+++ b/resources/web/creator_rewards.html
@@ -874,7 +874,7 @@
                             data-bv-notempty-message="The username is required and cannot be empty"
 
                             data-bv-regexp="true"
-                            data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                            data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                             data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                             data-bv-stringlength="true"
@@ -975,7 +975,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -1141,7 +1141,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
