--- a/resources/web/landing.html
+++ b/resources/web/landing.html
@@ -330,7 +330,7 @@
                         data-bv-notempty-message="The username is required and cannot be empty"
 
                         data-bv-regexp="true"
-                        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+                        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
                         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
                         data-bv-stringlength="true"
@@ -431,7 +431,7 @@
           data-bv-notempty-message="The username is required and cannot be empty"
 
           data-bv-regexp="true"
-          data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+          data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
           data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
           data-bv-stringlength="true"
@@ -597,7 +597,7 @@
         data-bv-notempty-message="The username is required and cannot be empty"
 
         data-bv-regexp="true"
-        data-bv-regexp-regexp="[a-zA-Z0-9_\.]+"
+        data-bv-regexp-regexp="^[a-zA-Z0-9\._-]+$"
         data-bv-regexp-message="The username can only consist of alphabetical, number, dot and underscore"
 
         data-bv-stringlength="true"
