--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -179,7 +179,7 @@
         <div id="what_is_bitpieces" class="row featurette">
           <div class="col-md-12">
             <h2 class="featurette-heading">What is <span class="text-muted">Bitpieces? </span></h2>
-            <p class="lead"> <a href="/FAQ">Bitpieces</a> is a crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
+            <p class="lead"> <a href="/FAQ">Bitpieces</a> is an open source crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
             </p>
           </div>
         </div>
