Lowering fees to 1%

--- a/resources/web/FAQ.html
+++ b/resources/web/FAQ.html
@@ -397,8 +397,8 @@
             and asks is a zero-fee process. Withdrawals, after selling pieces, are also entirely free.
 
             <br><br>
-            For creators, there are no startup fees, but each withdrawal of funds raised incurs a 5% fee on the
-            withdrawal amount. This is in line with other crowd funding websites.
+            For creators, there are no startup fees, but each withdrawal of funds raised incurs a 1% fee on the
+            withdrawal amount. This is far less than other crowd funding websites.
 
             <hr class="col-md-12">
           </div>
