--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -182,7 +182,7 @@
          </div>
          <div class="col-md-6">
          <br><br><br>
-          <h2 class="featurette-heading">What is <span class="text-muted">Bitpieces? </span></h2>
+          <h2 class="featurette-heading">What is <span class="text-primary">Bitpieces? </span></h2>
           <br>
           <p class="lead"> <a href="/FAQ">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
           </p>
@@ -246,8 +246,8 @@
           <img class="featurette-image img-responsive" src="img/group2square.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Fund <span class="text-muted">creativity </span></h2>
-          <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-muted">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-muted">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
+          <h2 class="featurette-heading">Fund <span class="text-primary">creativity </span></h2>
+          <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-primary">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-primary">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
           </p>
         </div>
       </div>
@@ -255,7 +255,7 @@
       <hr class="featurette-divider">
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">The world's first <span class="text-muted">international</span> funding platform</h2>
+          <h2 class="featurette-heading">The world's first <span class="text-primary">international</span> funding platform</h2>
           <p class="lead">Using the <a href="/FAQ#why_use_bitcoin_instead_of_dollars">bitcoin network</a> as a universal payment processor ensures that anyone can fund who they want, anywhere in the world. Display the value of your pieces in any one of <b>20</b> <a href="/FAQ#how_does_currency_conversion_work">currencies</a>, on an interactive, funding <b>dashboard</b>. Fund projects in Visual Arts, Comics, Design, Dance, Education, Film and Video, Environment, Music, Fashion, Tech, Photography, Theatre, Food, Health, Writing and Lit, Sports, Small Business, Gaming, Crafts, and Journalism. <a href="https://coinbase.com/">Coinbase</a> is used as the payment processor, which ensures free transactions within the bitcoin network.
 
           </p>
@@ -272,7 +272,7 @@
           <img class="featurette-image img-responsive" src="img/guitarists.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Zero fees on a <span class="text-muted">secure platform </span></h2>
+          <h2 class="featurette-heading">Zero fees on a <span class="text-primary">secure platform </span></h2>
           <p class="lead">Security is paramount for both funders and creators, which is why Bitpieces has a 5 pillar <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">security strategy</a>. <br><br>For funders, the experience of buying and trading pieces is entirely <b>free</b>. Far less than other crowdfunding sites, content-creators have a <b>1%</b> <a href="/FAQ#what_are_the_fees">fee</a> on withdrawals. When not using coinbase, your client may include <a href="http://bitcoinfees.com/">network fees</a> when you first buy pieces.
           </p>
         </div>
@@ -282,7 +282,7 @@
 
       <div id="last" class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading"><span class="text-muted">Open source</span> funding</h2>
+          <h2 class="featurette-heading"><span class="text-primary">Open source</span> funding</h2>
           <p class="lead">The source code of the entire project is open-source, hosted on <a href="https://github.com/tchoulihan/bitpieces">github</a>. In addition, an open trading API is in development, to allow funders to buy and sell pieces programmatically. </p>
 
         </div>
