--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -182,7 +182,7 @@
          </div>
          <div class="col-md-6">
          <br><br><br>
-          <h2 class="featurette-heading">What is <b>Bitpieces? </b></h2>
+          <h2 class="featurette-heading">What is <i>Bitpieces? </i></h2>
           <br>
           <p class="lead"> <a href="/FAQ">Bitpieces</a> is an <b>open source</b> crowd-funding platform that gives content <a href="/FAQ#what_is_a_creator">creators</a>, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">selling pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
           </p>
