--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -246,7 +246,7 @@
           <img class="featurette-image img-responsive" src="img/group2square.jpg" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading"><small>Fund creativity</small> </h2>
+          <h2 class="featurette-heading">Fund creativity </h2>
           
           <p class="lead"> A local band needs some equipment to go on the road, but doesn't have the cash. <span class="text-primary">An educational youtuber needs to quit their job to make more videos.</span> An artist needs supplies. <span class="text-primary">A community organization is raising funds to throw events.</span> <b>Bitpieces</b> gives content creators, small businesses, and community projects a way to raise funding by <a href="/FAQ#what_are_pieces">issuing pieces</a> of their brand, and sharing profits with their funders through monetary <a href="/FAQ#what_are_rewards">rewards</a> over time. 
           </p>
