--- a/resources/web/creators_pages/Leonardo_Davinci.html
+++ b/resources/web/creators_pages/Leonardo_Davinci.html
@@ -69,7 +69,7 @@
        <div class="form-group"> 
         <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator..." /> 
        </div> 
-       <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button> 
+       <button type="submit" class="btn btn-success"><i class="fa fa-search"></i></button> 
       </form> 
       <ul class="nav navbar-nav navbar-right"> 
        <li class="dropdown messages-dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> Messages <span class="badge">7</span> <b class="caret"></b></a> 
