--- a/resources/web/testing_home.html
+++ b/resources/web/testing_home.html
@@ -97,7 +97,7 @@
               <div class="form-group">
                <input name="search_input" type="text" class="form-control typeahead" placeholder="Search for Creator...">
              </div>
-             <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+             <button type="submit" class="btn btn-success"><i class="fa fa-search"></i></button>
            </form>
 
 
