--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -151,6 +151,11 @@
         </form>
       </div>
       <hr></hr>
+
+      <div class="tab-content">
+  <div class="tab-pane fade in active" id="list_style">
+ 
+
       <div class="row"> 
       <div class="col-md-12">
           <div class="panel panel-primary">
@@ -205,6 +210,16 @@
             </div>
           </div>
         </div>
+        <!-- end of tab -->
+        </div>
+
+        <div class="tab-pane fade" id="square_style">
+          DERP
+        </div>
+
+        <!-- end of tabs content -->
+        </div>
+
 
 
       </div>
