--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -151,19 +151,23 @@
         </form>
       </div>
       <hr></hr>
+      <ul class="nav nav-tabs" role="tablist">
+        <li class="active"><a href="#list_style" role="tab" data-toggle="tab">List</a></li>
+        <li><a href="#square_style" role="tab" data-toggle="tab">Sqaures</a></li>
+      </ul>
 
       <div class="tab-content">
-  <div class="tab-pane fade in active" id="list_style">
- 
+        <div class="tab-pane fade in active" id="list_style">
 
-      <div class="row"> 
-      <div class="col-md-12">
-          <div class="panel panel-primary">
-            <div class="panel-heading">
-              <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Creators</h3>
-            </div>
-            <div id="discover_creators" class="panel-body" style="height: 80vh;overflow:auto;">
-              <script id="discover_creators_template" type="x-tmpl-mustache"> 
+
+          <div class="row"> 
+            <div class="col-md-12">
+              <div class="panel panel-primary">
+                <div class="panel-heading">
+                  <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Creators</h3>
+                </div>
+                <div id="discover_creators" class="panel-body" style="height: 80vh;overflow:auto;">
+                  <script id="discover_creators_template" type="x-tmpl-mustache"> 
                 <table id="discover_creators_table" class="table table-hover table-striped tablesorter">
                   <thead>
                     <tr>
@@ -211,18 +215,18 @@
           </div>
         </div>
         <!-- end of tab -->
-        </div>
-
-        <div class="tab-pane fade" id="square_style">
-          DERP
-        </div>
-
-        <!-- end of tabs content -->
-        </div>
-
-
-
       </div>
+
+      <div class="tab-pane fade" id="square_style">
+        DERP
+      </div>
+
+      <!-- end of tabs content -->
+    </div>
+
+
+
+  </div>
 
 
       
