--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -152,12 +152,12 @@
       </div>
       <hr></hr>
       <ul class="nav nav-tabs" role="tablist">
-        <li class="active"><a href="#list_style" role="tab" data-toggle="tab">List</a></li>
-        <li><a href="#square_style" role="tab" data-toggle="tab">Sqaures</a></li>
+        <li class="active"><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
+        <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
       </ul>
 
       <div class="tab-content">
-        <div class="tab-pane fade in active" id="list_style">
+        <div class="tab-pane fade in active" id="list-style">
 
 
           <div class="row"> 
@@ -217,7 +217,7 @@
         <!-- end of tab -->
       </div>
 
-      <div class="tab-pane fade" id="square_style">
+      <div class="tab-pane fade" id="square-style">
         DERP
       </div>
 
