--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -216,6 +216,7 @@
         </div>
         <!-- end of tab -->
       </div>
+      </div>
 
       <div class="tab-pane fade" id="square-style">
         DERP
