--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -125,6 +125,7 @@
 
 
       <div class="row">
+      <div class="col-md-10">
 
         <form id="discover_search" class="form-inline" role="form">
 
@@ -150,11 +151,15 @@
           
         </form>
       </div>
-      <hr></hr>
-      <ul class="nav nav-pills" role="tablist">
-        <li class="active"><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
-        <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
-      </ul>
+      <div class="col-md-2">
+        <ul class="nav nav-pills" role="tablist">
+          <li class="active"><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
+          <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr></hr>
+
 
       <div class="tab-content">
         <div class="tab-pane fade in active" id="list-style">
