--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -152,7 +152,7 @@
         </form>
       </div>
       <div class="col-md-2">
-        <ul class="nav nav-pills" role="tablist">
+      <ul class="nav nav-pills" role="tablist" style="text-align: right">
           <li class="active"><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
           <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
         </ul>
