--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -153,8 +153,8 @@
       </div>
       <div class="col-md-2">
         <ul class="nav nav-pills pull-right" role="tablist">
-        <li class="active "><a href="#list-style" role="tab" data-toggle="tab">List</a></li>
-          <li><a href="#square-style" role="tab" data-toggle="tab">Sqaures</a></li>
+        <li class="active "><a href="#list-style" role="tab" data-toggle="tab"><i class="fa fa-list"></i></a></li>
+          <li><a href="#square-style" role="tab" data-toggle="tab"><i class="fa fa-th"></i></a></li>
         </ul>
       </div>
     </div>
