--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -226,7 +226,9 @@
     </div>
 
 
+
     <div id="main_body" class="row">
+    <h1>Page body</h1>
       <script id="main_body_template" type="x-tmpl-mustache">
         <p class="lead">{{.}}</p>
       </script>
