--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -228,7 +228,7 @@
 
 
     <div id="main_body" class="row">
-      <h1 class="hide">Page body</h1>
+      <h1>Page body</h1>
       <script id="main_body_template" type="x-tmpl-mustache">
 
         <p class="lead">{{.}}</p>
