--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -270,8 +270,8 @@
             data-bv-notempty="true"
             data-bv-notempty-message="Can't be empty"
 
-            data-bv-stringlength-min=1
-            data-bv-stringlength-max=140
+            data-bv-stringlength-min="1"
+            data-bv-stringlength-max="140"
             data-bv-stringlength-message="Too many characters"
             
             >
