--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -270,9 +270,10 @@
             data-bv-notempty="true"
             data-bv-notempty-message="Can't be empty"
 
+            data-bv-stringlength="true"
             data-bv-stringlength-min="1"
             data-bv-stringlength-max="140"
-            data-bv-stringlength-message="Too many characters"
+            data-bv-stringlength-message="The description must be more than 1 and less than 140 characters long"
             
             >
           </div>
