--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -276,7 +276,8 @@
             data-bv-stringlength-message="The description must be more than 1 and less than 140 characters long"
             
             >
-          </textarea>
+            </textarea>
+          </div>
         </div>
 
 
