--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -262,8 +262,8 @@
         <div id="shortDescriptionDiv" class="form-group">
           <label for="shortDescription3" class="col-sm-2 control-label">Description</label>
           <div class="col-sm-10">
-          <textarea name="shortDescription" rows="3" type="name" class="form-control" id="shortDescription3" 
-            
+          <textarea name="shortDescription" rows="3" class="form-control" id="shortDescription3" 
+            placeholder="140 characters max"
 
             data-bv-message="Not valid"
 
