--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -274,8 +274,7 @@
             data-bv-stringlength-min="1"
             data-bv-stringlength-max="140"
             data-bv-stringlength-message="The description must be more than 1 and less than 140 characters long"
-            >
-            </textarea>
+            ></textarea>
           </div>
         </div>
 
