--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -239,7 +239,7 @@
                     
 
                     
-                    <a href="/creators/main/{{creators_name}}"> {{creators_name}} </a>
+                    <h1><a href="/creators/main/{{creators_name}}"> {{creators_name}} </a></h1>
                     <small> description </small>
                     <h4> verified </h4>
                     <h3> test2 </h3>
