--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -162,7 +162,7 @@
 
 
       <div class="tab-content">
-        <div class="tab-pane fade in active" id="list-style">
+        <div class="tab-pane fade" id="list-style">
 
 
           <div class="row"> 
@@ -224,7 +224,7 @@
        <!-- end of tab -->
       </div>
 
-      <div class="tab-pane fade" id="square-style">
+      <div class="tab-pane fade in active" id="square-style">
         <div class="row"> 
 
 
