--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -249,17 +249,21 @@
 
                     <br><br>
                     <div class="row">
-                      <div class="col-md-4">
-                        <h5>Worth</h5>
-                        400
+                      <div class="col-md-3">
+                        <b>400</b>
+                        Worth
                       </div>
-                        <div class="col-md-4">
-                        Backers
-                        4
+                      <div class="col-md-3">
+                        <b>4</b>
+                         Backers
                       </div>
-                        <div class="col-md-4">
+                      <div class="col-md-3">
+                        <b>Arts, sciences</b>
                         Categories
-                        4
+                      </div>
+                      <div class="col-md-3">
+                        <b>0.5%</b>
+                        Reward yield
                       </div>
                     </div>
 
