--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -249,21 +249,17 @@
 
                     <br><br>
                     <div class="row">
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <b>400</b>
-                        Worth
+                        <p>Worth</p>
                       </div>
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <b>4</b>
-                         Backers
+                         <p>Backers</p>
                       </div>
-                      <div class="col-md-3">
-                        <b>Arts, sciences</b>
-                        Categories
-                      </div>
-                      <div class="col-md-3">
+                      <div class="col-md-4">
                         <b>0.5%</b>
-                        Reward yield
+                        <p>Reward yield</p>
                       </div>
                     </div>
 
