--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -250,16 +250,16 @@
                     <br><br>
                     <div class="row">
                       <div class="col-md-4">
-                        <b>400</b>
-                        <p>Worth</p>
+                        <p class="announcement-heading">400</p>
+                        <p class="announcement-text">Worth</p>
                       </div>
                       <div class="col-md-4">
-                        <b>4</b>
-                         <p>Backers</p>
+                        <p class="announcement-heading">4</p>
+                        <p class="announcement-text">Backers</p>
                       </div>
                       <div class="col-md-4">
-                        <b>0.5%</b>
-                        <p>Reward yield</p>
+                        <p class="announcement-heading">0.5%</p>
+                        <p class="announcement-text">Reward yield</p>
                       </div>
                     </div>
 
