--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -238,9 +238,7 @@
 
 
                   <div class="panel-body">
-                  <img class="discover-image img-responsive" 
-                  src="https://img.youtube.com/vi/%3Cinsert-youtube-video-id-here%3E/maxresdefault.jpg" 
-                  alt="Generic placeholder image">
+                  <div style="width:100%; height: 400px; background: url('img/market-practices.jpg')  no-repeat center top transparent;">&nbsp;</div>
 
                     
 
