--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -125,7 +125,11 @@
           <div class="item active">
             <div class="900-image" align="center">
               <!-- <img src="img/market-practices.jpg" alt="First slide"> -->
-              <div style="width:100%; height: 400px; background: url('img/market-practices.jpg')  no-repeat center top transparent;">&nbsp;</div>
+              <div style="margin: -15px; 
+              width:100%; 
+              height: 207px; 
+              background: url('img/market-practices.jpg') 
+              no-repeat center top transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
