--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -238,8 +238,10 @@
 
 
                   <div class="panel-body">
-                  <div style="width:100%; 
-                  height: 207px; 
+                  <div style="
+                  height: 207px;
+                  width:auto !important; 
+                   
                   background: url('https://img.youtube.com/vi/%3Cinsert-youtube-video-id-here%3E/maxresdefault.jpg')  
                   no-repeat center top transparent;">&nbsp;</div>
 
