--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -244,7 +244,7 @@
                   height: 207px;
                   width:auto !important; 
                   
-                  background: url('https://img.youtube.com/vi/%3Cinsert-youtube-video-id-here%3E/maxresdefault.jpg')  
+                  background: url('https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg')  
                   no-repeat center top transparent;">&nbsp;</div>
 
                     
