--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -238,14 +238,9 @@
 
 
                   <div class="panel-body">
-                  <div style="
-                  display: block;
-                  margin: -15px;
-                  height: 207px;
-                  width:auto !important; 
-                  
-                  background: url('https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg')  
-                  no-repeat center top transparent;">&nbsp;</div>
+                  <img class="discover-image img-responsive" 
+                  src="https://img.youtube.com/vi/05BipfPpUsA/maxresdefault.jpg" 
+                  alt="Generic placeholder image">
 
                     
 
