--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -259,15 +259,15 @@
                     <h4> Verified </h4>
                     <div class="row">
                       <div class="col-md-4">
-                        <h4>400</h4>
+                        <h4>{{worth_current}}</h4>
                         <h6>Worth</h6>
                       </div>
                       <div class="col-md-4">
-                        <h4>4</h4>
+                        <h4>{{number_of_backers}}</h4>
                         <h6>Backers</h6>
                       </div>
                       <div class="col-md-4">
-                        <h4>0.5%</h4>
+                        <h4>{{reward_yield_current}}/h4>
                         <h6>Reward yield</h6>
                       </div>
                     </div>
