--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -252,7 +252,7 @@
                 
                     <h4> {{description}} </h4>
                   
-                    {{verified_html}}
+                    {{{verified_html}}}
 
                     <br><br>
 
@@ -267,7 +267,7 @@
                         <h6>Backers</h6>
                       </div>
                       <div class="col-md-4">
-                        <h4>{{reward_yield_current}}/h4>
+                        <h4>{{reward_yield_current}}</h4>
                         <h6>Reward yield</h6>
                       </div>
                     </div>
