--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -252,7 +252,7 @@
                       <div class="col-md-6">
                       <small> {{category_names}} </small>
                       </div>
-                      <div class="col-md-6 pull-right">
+                      <div class="col-md-6">
                        {{{verified_html}}}
                       </div>
                     </div>
