--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -249,10 +249,10 @@
                     
                     <h2><b><a href="/creators/main/{{creators_name}}"> {{creators_name}} </a></b></h2>
                     <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-xs-6">
                       <small> {{category_names}} </small>
                       </div>
-                      <div class="col-md-6">
+                      <div class="col-xs-6">
                        {{{verified_html}}}
                       </div>
                     </div>
@@ -264,15 +264,15 @@
 
                     <hr>                  
                     <div class="row">
-                      <div class="col-md-4">
+                      <div class="col-xs-4">
                         <h4>{{worth_current}}</h4>
                         <h6>Worth</h6>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-xs-4">
                         <h4>{{number_of_backers}}</h4>
                         <h6>Backers</h6>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-xs-4">
                         <h4>{{reward_yield_current}}</h4>
                         <h6>Reward yield</h6>
                       </div>
