--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -239,9 +239,11 @@
 
                   <div class="panel-body">
                     <div class="discover-image">
+                    <a href="/creators/main/{{creators_name}}"> 
                     <img class="img-responsive img-center remove-border" 
                       src="{{youtube_image_url}}"
                       alt="Generic placeholder image">
+                      </a>
                     </div>
 
                     
