--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -295,9 +295,9 @@
 
     <!-- A centered panel -->
     <div class="row">
-      <div class="col-md-12 img-center img-responsive">
+      <div class="col-md-12">
      
-              <iframe 
+              <iframe width="640" height="480"
               src="//www.youtube.com/embed/pWoo4xv-qoA?rel=0&amp;theme=light&amp;modestbranding=1&amp;wmode=transparent&amp;showinfo=0" 
               frameborder="0" allowfullscreen="">
               </iframe>
