--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -297,7 +297,7 @@
     <div class="row">
       <div class="col-md-12">
      
-              <iframe width="640" height="480"
+              <iframe id="youtubeFrame" width="640" height="480"
               frameborder="0" allowfullscreen="">
               </iframe>
 
