--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -232,7 +232,7 @@
           <div id="discover_creators_square" class="panel-body">
             <script id="discover_creators_square_template" type="x-tmpl-mustache"> 
             {{#.}}
-            <div class="clearfix"></div>
+            <div class="clearfix visible-xs-block"></div>
               <div class="col-md-3">
                 <div class="panel panel-primary">
 
