--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -241,7 +241,7 @@
                   <div class="panel-body">
                     <div class="discover-image">
                     <a href="/creators/main/{{creators_name}}"> 
-                    <img height="241" class="img-responsive img-center remove-border" 
+                    <img class="img-responsive img-center remove-border" 
                       src="{{youtube_image_url}}"
                       alt="Generic placeholder image">
                       </a>
