--- a/resources/testweb/creator_main.html
+++ b/resources/testweb/creator_main.html
@@ -296,10 +296,11 @@
     <!-- A centered panel -->
     <div class="row">
       <div class="col-md-12">
-     
-              <iframe id="youtubeFrame" width="640" height="480"
+        <div class="embed-responsive embed-responsive-16by9">
+              <iframe id="youtubeFrame" 
               frameborder="0" allowfullscreen="">
               </iframe>
+              </div>
 
       </div>
     </div>
