fixing up the landing a bit

--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -125,11 +125,9 @@
           <div class="item active">
             <div class="900-image" align="center">
               <!-- <img src="img/market-practices.jpg" alt="First slide"> -->
-              <div style="margin: -15px; 
-              width:100%; 
-              height: 207px; 
+              <div style="margin: width:100%; height: 400px;
               background: url('img/market-practices.jpg') 
-              no-repeat center top transparent;">&nbsp;</div>
+              no-repeat center 15% transparent;">&nbsp;</div>
             </div>
             <div class="container">
               <div class="carousel-caption">
@@ -219,7 +217,7 @@
           <i class="fa fa-trophy fa-5x"></i>
           <h2>Earn rewards</h2>
           <p>Creators are <b>required</b> to pay <a href="/FAQ#what_are_rewards">rewards</a> to their funders, starting out small, and growing as they grow their brand. This, along with a 
-            <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">verification system</a>, <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">creator safety ratings</a>, and a commenting system that provides a dialog between creators and their funders, builds a <a href="/FAQ#why_are_rewards_mandatory">history of trust</a>. Also, funders of projects earn <a href="#">badges</a>  and points for various objectives.</p>
+            <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">verification system</a>, <a href="/FAQ#how_do_i_know_if_a_creator_is_safe">creator safety ratings</a>, and a commenting system that provides a dialog between creators and their funders, builds a <a href="/FAQ#why_are_rewards_mandatory">history of trust</a>. Check out a sample user page <a href="/users/overview/testuser">here</a>.</p>
 
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
@@ -228,10 +226,10 @@
            <p><a class="btn btn-primary" href="#" role="button" data-toggle="modal" data-target="#userloginModal" role="button">Sign up &raquo;</a></p>
          </div>
          <div class="col-lg-4">
-          <p><a class="btn btn-primary" href="FAQ#what_are_pieces" role="button">Learn more about pieces &raquo;</a></p>
+          <p><a class="btn btn-primary" href="/discover" role="button">Discover &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <p><a class="btn btn-primary" href="FAQ#what_are_rewards" role="button">Learn more about rewards &raquo;</a></p>
+          <p><a class="btn btn-primary" href="FAQ#what_are_rewards" role="button">Learn more &raquo;</a></p>
         </div>
       </div>
 
