--- a/resources/testweb/landing.html
+++ b/resources/testweb/landing.html
@@ -160,7 +160,7 @@
               <div class="carousel-caption">
                 <h1><b>Get creative projects in motion</b></h1>
                 <p></p>
-                <p><a class="btn btn-lg btn-primary" href="#fund_creativity" role="button">Learn more</a></p>
+                <p><a class="btn btn-lg btn-primary" href="/discover" role="button">Discover</a></p>
               </div>
             </div>
           </div>
