--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -131,7 +131,7 @@
     
           <div class="col-xs-6">
           <div class="form-group" id="categories">
-          <label for="inputUsername3" class="col-xs-2 control-label">Show me</label>
+          <label for="categories_template" class="col-xs-2 control-label">Show me</label>
             <script id="categories_template" type="x-tmpl-mustache"> 
 
               <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
