--- a/resources/testweb/discover.html
+++ b/resources/testweb/discover.html
@@ -133,7 +133,7 @@
           <div class="form-group" id="categories">
             <label class="col-sm-2 control-label">Show me</label>
             <div class="col-xs-4">
-              <script id="categories_template" type="x-tmpl-mustache"> 
+              <!-- <script id="categories_template" type="x-tmpl-mustache"> 
 
               <select name="category" class="form-control" role="menu" aria-labelledby="dropdownMenu1">
                 <option value="All">All</option>
@@ -142,7 +142,7 @@
                 {{/.}}
               </select>
 
-            </script>
+            </script> -->
           </div>
         </div>
 
